--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,4 +18,7 @@ futures-preview = { version = "=0.3.0-alpha.17", features = ["async-await", "nig
 #hwloc = { path = "../hwloc-rs" }
 hwloc = "0.5"
 bytes = "0.4"
+memmap = "0.7"
 
+[dev-dependencies]
+tempdir = "*"
